trying to make nav bar responsive. need to make sure collapse target is targetting the right thing

--- a/public/main.css
+++ b/public/main.css
@@ -74,6 +74,11 @@ input[type = number],[type=text]{
 	max-height: 50%;
 }
 
+.add-prop-header-title{
+	color: brown;
+	margin-top: 20px;
+}
+
 .add-prop-button-container input, h6{
 	display: inline;
 	margin-right: 30px;
